@@ -32,6 +32,7 @@
 - (int)firstHour;
 - (int)lastHour;
 - (int)minimumStep;
+- (void)deselectAll:(id)sender;
 @end
 
 @interface NSObject(DayViewDelegate)
