@@ -9,4 +9,6 @@ In no particular order :
    
 * fix headers mess
 
+* fix element selection (lack of) mechanism
+
 Want to help out ? Contact me at p.o.roussel@free.fr
